# RacingDashCam

./: .gitignore  README.md
.github/: FUNDING.yml
Docs/: CANBUS_GUIDE.md  GPS_LC29H_SETUP.md  GPS_QUICK_REFERENCE.md  GPS_TIME_SYNC_GUIDE.md  GPS_TIME_SYNC_QUICK.md  GPU_DISPLAY_NOTES.md  README.md  SETUP_GUIDE.md  wiring.md
Docs/Fuel_Consumption/: AutoResetFix.MD  CHANGELOG.md  FUEL_CONSUMPTION_GUIDE.md  FUEL_IMPLEMENTATION_SUMMARY.md  FUEL_TESTING_QUICK_REF.md
Docs/Power_Monitor/: POWER_MONITOR_SETUP.md
Docs/hardware/: v1-pi5-arducam.md
Scripts/install/v1-pi5-arducam/: dashcam_install.sh  wifiapsetup.sh
python/: README.md  dashcam.py  pyproject.toml
python/dashcam/: __main__.py  config.template.yaml
python/dashcam/canbus/: base.py
python/dashcam/canbus/vehicles/: camaro_2013_lfx.py
python/dashcam/core/: config.py  gps_handler.py
python/dashcam/utils/: canbus_integration_example.py
python/scripts/: bench_display.py  bench_display_drm.py  power_monitor.py  test_gps.py
systemd/: power-monitor.service
