[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "racingdashcam"
version = "0.1.0"
description = "Racing Dashcam software package"
readme = "../README.md"
requires-python = ">=3.8"
authors = [{ name = "clutch2sft" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["dashcam*"]
